# coloring

./: .gitignore  CHANGELOG.md  LICENSE  README.md  coloring.cabal  coloring.nix  default.nix  package.yaml  shell.nix  stack.yaml
app/: Main.hs
src/: Application.hs  Application1.hs  Experiments.hs  Log.hs
src/Plesk/: Atf.hs  Panel.hs
test/: atf.txt
