cabal-version: 3.0

name:           coloring
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/coloring#readme>
homepage:       https://github.com/githubuser/coloring#readme
bug-reports:    https://github.com/githubuser/coloring/issues
author:         Stanislav Smirnov
maintainer:     stanislav.ktak.smirnov@gmail.com
copyright:      2024 Stanislav Smirnov
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/coloring

executable coloring
  main-is: Main.hs

  other-modules:
      Application
      Linux.Syslog
      Plesk.Atf
      Plesk.Panel

  hs-source-dirs:
      src

  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , bytestring
    , conduit
    , parsec
    , rainbow
    , text

  default-language: GHC2021
